--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "boxicons": "^2.1.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.1.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "tsparticles": "^3.5.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^5.3.3"
   }
 }
