--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "boxicons": "^2.1.4",
     "react": "^18.3.1",
